--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,6 @@ steps:
     jdkVersionOption: '1.17'
     jdkDirectory: /usr/lib/jvm/java-17-openjdk-amd64/bin/java 
     mavenVersionOption: path
-    mavenDirectory: /tmp/apache-maven-3.9.0/bin
+    mavenDirectory: /home/ubuntu/myagent/tmp
 
 
