--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,8 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     javaHomeOption: path
     jdkVersionOption: '1.17'
-    jdkDirectory: /usr/lib/jvm/java-17-openjdk-amd64/bin/java 
+    jdkDirectory: /usr/lib/jvm/java-17-openjdk-amd64 
     mavenVersionOption: path
-    mavenDirectory: /home/ubuntu/tmp/
+    mavenDirectory: /tmp/opt/maven
 
 
