--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,6 @@ steps:
     jdkVersionOption: '1.17'
     jdkDirectory: /usr/lib/jvm/java-17-openjdk-amd64
     mavenVersionOption: path
-    mavenDirectory: /opt/maven
+    mavenDirectory: /opt/apache-maven-3.6.3
 
 
