--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,9 +29,7 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     jdkVersionOption: "${{ parameters.jdkversion }}"
-    mavenVersionOption: "${{ parameters.maven }}"
-- task: JavaToolInstaller@0
-  inputs:
-    versionSpec: '1.17' 
+    mavenVersionOption: "${{ parameters.maven }}" 
+    jdkDirectory: /usr/lib/jvm/java-17-openjdk-amd64
 
 
